More WAVE contrast issues

--- a/ist263-talley.css
+++ b/ist263-talley.css
@@ -12,7 +12,7 @@ nav {display: inline-block;}
   #nav-column a:link, #nav-column a:visited {color: #D44500; font-weight: 500; text-decoration: none; border: none; margin-left: 0;}
   #nav-column a:hover, #nav-column a:active {color: #6F777D; font-weight: 500; text-decoration: underline; border: none; margin-left: 0;}
   */
-  #page-body {background-color: #f1f1f1; padding: 0.5em;}
+  #page-body {background-color: #f9f9f9; padding: 0.5em;}
   #header-panel {width: 90%; background-color: #fff; margin: 0 auto; padding: 1em; text-align: center;}
   #header-panel h1 {font-family: Goudy, Times Roman, serif; font-size: 3em; text-align: center; color: #D44500; padding: 0; margin: 0;}
   #header-panel p {font-family: Goudy, Times Roman, serif; font-size: 2em; text-align: center; padding: 0; color:  #6F777D; margin: 0;}
@@ -33,4 +33,4 @@ nav {display: inline-block;}
   a:hover, a:active {color: #6F777D; background-color: #fff; text-decoration: none; border-bottom: 1px solid;}
 #top-banner a:link, a:visited {border: none;}
 #top-banner a:hover, a:active {border: none;}
-  code {font-family: "Courier New", Courier, monospace; font-size: 1em; color: #D44700; font-weight: 700;}
+  code {font-family: "Courier New", Courier, monospace; font-size: 1em; color: #D43000; font-weight: 700;}
